fix date overlap fullscreen overlays

--- a/src/components/menu/menu.module.scss
+++ b/src/components/menu/menu.module.scss
@@ -104,6 +104,8 @@ section.userMenuWrapper{
 	border: none;
 	background-color: darken($cRed, 15%);
 
+	z-index: -1;
+
 	&::-webkit-inner-spin-button,
 	&::-webkit-clear-button{
 		display: none;
